fix(alert) - Fixes Button placement in Alerts
This closes #431 - Fixes an issue where Buttons were overlapping in Theme FAU-Elemental.

--- a/src/_shared/scss/fau-elemental-compatibility-layer/_alert.scss
+++ b/src/_shared/scss/fau-elemental-compatibility-layer/_alert.scss
@@ -10,6 +10,16 @@
       padding-top: 0;
     }
 
+    .wp-block.wp-block-buttons {
+      margin-top: var(--Spacing-4x);
+
+      &.wp-block-buttons-is-layout-flex{
+        .wp-block-button {
+          margin-right: 40px;
+        }
+      }
+    }
+
     padding: var(--Spacing-6x, 1.5rem) !important;
 
     &.alert-success *:not(code, pre),
